[tool.poetry]
name = "grubhub"
version = "0.1.0"
description = "A quick wrapper around GrubHub's API, to fetch account and order information."
authors = ["Jérémie Lumbroso <lumbroso@cs.princeton.edu>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/jlumbroso/grubhub"
repository = "https://github.com/jlumbroso/grubhub"
include = [
    "README.md",
]
keywords = [
    "grubhub",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py{38,39}

[testenv]
requires =
    tox-poetry-dev-dependencies
poetry_add_dev_dependencies = True
commands =
    pytest
"""

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.3.1"
python-dateutil = "^2.8.1"
bs4 = "^0.0.1"
requests = "^2.26.0"
user-agent = "^0.1.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^5.3.4"
ipywidgets = "^7.5.1"
sphinx = "^3.3.0"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-rtd-theme = "^0.5.0"
pytest-cov = "^2.10.1"
codecov = "^2.1.10"
pytest-mock = "^3.3.1"
pytest-subtests = "^0.3.2"
pytest-repeat = "^0.9.1"
tox = "^3.20.1"
tox-poetry-dev-dependencies = "^0.0.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
